--- a/SiteGenerator/SiteGenerator.csproj
+++ b/SiteGenerator/SiteGenerator.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Markdig" Version="0.31.0" />
+  </ItemGroup>
+
 </Project>
