--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,12 @@ project.lock.json
 project.fragment.lock.json
 artifacts/
 
+# Tye
+.tye/
+
+# .NET Tool Restore
+!.config/dotnet-tools.json
+
 # ASP.NET Scaffolding
 ScaffoldingReadMe.txt
 
@@ -398,6 +404,3 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
-
-# CSharpier
-.csharpierignore
