--- a/SiteGenerator/SiteGenerator.csproj
+++ b/SiteGenerator/SiteGenerator.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Handlebars.Net" Version="2.1.6" />
     <PackageReference Include="Markdig" Version="0.37.0" />
     <PackageReference Include="YamlDotNet" Version="16.1.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
