--- a/code/config/config.json
+++ b/code/config/config.json
@@ -1,4 +1,6 @@
 {
   "SiteTitle": "Asbjørn Brandt",
-  "BaseUrl": "https://asbjornbrandt.com"
+  "BaseUrl": "https://asbjornbrandt.com",
+  "Author": "Asbjørn Brandt",
+  "Description": "A small site mostly to play with static sites and share some thoughts and rough writing on tech, data and programming."
 }
