Copy content to old site test input

--- a/code/SiteGenerator.Tests/SiteGenerator.Tests.csproj
+++ b/code/SiteGenerator.Tests/SiteGenerator.Tests.csproj
@@ -28,4 +28,9 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="OldSiteTestInput\posts\" />
+    <Folder Include="OldSiteTestOutput\" />
+  </ItemGroup>
+
 </Project>
