--- a/code/SiteGenerator.Tests/SiteGenerator.Tests.csproj
+++ b/code/SiteGenerator.Tests/SiteGenerator.Tests.csproj
@@ -41,6 +41,10 @@
       <Link>TestData\templates\%(RecursiveDir)%(Filename)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\assets\**\*">
+      <Link>TestData\assets\%(RecursiveDir)%(Filename)%(Extension)</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
