--- a/code/SiteGenerator.Tests/SiteGenerator.Tests.csproj
+++ b/code/SiteGenerator.Tests/SiteGenerator.Tests.csproj
@@ -41,7 +41,7 @@
       <Link>TestData\templates\%(RecursiveDir)%(Filename)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\..\assets\**\*">
+    <Content Include="..\..\content\assets\**\*">
       <Link>TestData\OldSiteInput\assets\%(RecursiveDir)%(Filename)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
